<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <TextView
        android:id="@+id/title_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/app_heading_size"
        android:gravity="center"/>

    <EditText
        android:id="@+id/username"
        android:layout_below="@id/title_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"/>
    <EditText
        android:id="@+id/password"
        android:layout_below="@id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"/>
    <Button
        android:id="@+id/loginButton"
        android:layout_below="@id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"/>
    <TextView
        android:id="@+id/noaccount"
        android:layout_below="@id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_account"
        android:layout_marginTop="@dimen/no_account_marginTop"
        android:gravity="center"
        android:autoLink="all"/>
    <TextView
        android:id="@+id/signup"
        android:layout_below="@id/noaccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textSize="@dimen/forgot_password_size"
        android:gravity="center"
        android:layout_marginTop="@dimen/no_account_marginTop"
        android:autoLink="phone"/>
    <TextView
        android:id="@+id/forgotPassword"
        android:layout_below="@id/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot"
        android:textSize="@dimen/forgot_password_size"
        android:gravity="center"
        android:layout_marginTop="@dimen/forgot_password_marginTop"
        android:autoLink="web"/>

   <!-- <Button
        android:id="@+id/getRegID"
        android:layout_below="@id/forgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Get RegID"/>-->

   <!-- <TextView
        android:id="@+id/regID"
        android:layout_below="@id/getRegID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>-->


</RelativeLayout>

    
